bug fix z-index в header__categories-wrapper

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -84,7 +84,7 @@
 		position: absolute;
 		background-color: $bg2-light;
 		width: 100%;
-		z-index: 3;
+		z-index: 4;
 		border-radius: 2px;
 		padding: 20px 20px;
 		top: 66px;
